--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
                     <div class="banner-benefits__column" id="banner-benefits-2">
                         <img src="assets/banner/benefit-2.svg" alt="benefit img" class="banner-benefits__img img">
                         <div class="banner-benefits__content">
-                            <p class="banner-benefits__title">Send the right message at the right time to convert more customers.</p>
+                            <p class="banner-benefits__title">Get AI-assisted suggestions to help make your content more engaging.</p>
                             <a href="#" class="link banner-benefits__link">Learn more</a>
                         </div>
                     </div>
                     <div class="banner-benefits__column" id="banner-benefits-3">
                         <img src="assets/banner/benefit-3.svg" alt="benefit img" class="banner-benefits__img img">
                         <div class="banner-benefits__content">
-                            <p class="banner-benefits__title">Send the right message at the right time to convert more customers.</p>
+                            <p class="banner-benefits__title">Boost customer loyalty by predicting the right ones to target.</p>
                             <a href="#" class="link banner-benefits__link">Learn more</a>
                         </div>
                     </div>
                     <div class="banner-benefits__column" id="banner-benefits-4">
                         <img src="assets/banner/benefit-4.svg" alt="benefit img" class="banner-benefits__img img">
                         <div class="banner-benefits__content">
-                            <p class="banner-benefits__title">Send the right message at the right time to convert more customers.</p>
+                            <p class="banner-benefits__title">Connect more tools, get more data, save time, and make better decisions.</p>
                             <a href="#" class="link banner-benefits__link">Learn more</a>
                         </div>
                     </div>
@@ -88,6 +88,123 @@
                 </div>
             </section>
         </div> 
+   </section>
+   <!--PRICES-->
+   <section class="prices">
+        <div class="prices__container container">
+            <div class="prices__title-container">
+                <h2 class="prices__title">Find the right plan</h2>
+            </div>
+            <div class="prices__table">
+                <div class="prices__recommends-plan">
+                    <div class="prices__recomends-plan-container">
+                        <p class="prices__recommends-text">Mailchimp Recommends</p>
+                    </div>
+                </div>
+                <div class="prices__table-container row-column-4">
+                    <div class="prices__plan-column">
+                        <div class="prices__plan-row">
+                            <h3 class="prices__plan-title">Premium</h3>
+                            <p class="prices__plan-text">Our most advanced tools, unlimited contacts, and priority support; built for teams.</p>
+                            <p class="prices__plan-text">Starts at</p>
+                            <p class="prices__plan-price">$350</p>
+                            <p class="prices__plan-text">/month based on 10,000 contacts*</p>
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                    </div>
+                    <div class="prices__plan-column">
+                        <div class="prices__plan-row">
+                            <h3 class="prices__plan-title">Standard</h3>
+                            <p class="prices__plan-text">Our most advanced tools, unlimited contacts, and priority support; built for teams.</p>
+                            <p class="prices__plan-text">Starts at</p>
+                            <p class="prices__plan-price">$350</p>
+                            <p class="prices__plan-text">/month based on 10,000 contacts*</p>
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                    </div>
+                    <div class="prices__plan-column">
+                        <div class="prices__plan-row">
+                            <h3 class="prices__plan-title">Essentials</h3>
+                            <p class="prices__plan-text">Our most advanced tools, unlimited contacts, and priority support; built for teams.</p>
+                            <p class="prices__plan-text">Starts at</p>
+                            <p class="prices__plan-price">$350</p>
+                            <p class="prices__plan-text">/month based on 10,000 contacts*</p>
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                    </div>
+                    <div class="prices__plan-column">
+                        <div class="prices__plan-row">
+                            <h3 class="prices__plan-title">Free</h3>
+                            <p class="prices__plan-text">Our most advanced tools, unlimited contacts, and priority support; built for teams.</p>
+                            <p class="prices__plan-text">Starts at</p>
+                            <p class="prices__plan-price">$350</p>
+                            <p class="prices__plan-text">/month based on 10,000 contacts*</p>
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                        <div class="prices__plan-row">
+                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
    </section>
 </body>
 </html>
