--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     <p>+1 (800) 315-5939</p>
                 </div>
                 <div class="header__sign-in-sign-up-bar">
-                    <button class="language-switcher">
+                    <button class="language-switcher button button-transperent">
                         <img src="assets/language.svg" alt="language-switcher" class="language-switcher__icon">
                     </button>
-                    <button class="search-controls">Search</button>
-                    <button class="user-access-buttons">Log In</button>
-                    <button class="user-access-buttons">Sign Up</button>
+                    <button class="search-controls button button-transperent">Search</button>
+                    <button class="user-access-buttons button button-transperent">Log In</button>
+                    <button class="user-access-buttons button">Sign Up</button>
                 </div>
             </div>
         </div>
@@ -105,104 +105,120 @@
                     <div class="prices__plan-column">
                         <div class="prices__plan-row">
                             <h3 class="prices__plan-title">Premium</h3>
-                            <p class="prices__plan-text">Our most advanced tools, unlimited contacts, and priority support; built for teams.</p>
+                            <p class="prices__plan-text prices__plan-describe">
+                                Our most advanced tools, unlimited contacts, and priority support; built for teams.
+                            </p>
                             <p class="prices__plan-text">Starts at</p>
                             <p class="prices__plan-price">$350</p>
                             <p class="prices__plan-text">/month based on 10,000 contacts*</p>
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Phone & Priority Support</p>
                         </div>
                         <div class="prices__plan-row">
                             <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Multivariate and A/B Testing</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Enhanced Automated Customer Journeys</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Predictive Segmentation</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Dedicated Onboarding Specialist</p>
                         </div>
                     </div>
                     <div class="prices__plan-column">
                         <div class="prices__plan-row">
                             <h3 class="prices__plan-title">Standard</h3>
-                            <p class="prices__plan-text">Our most advanced tools, unlimited contacts, and priority support; built for teams.</p>
+                            <p class="prices__plan-text prices__plan-describe">
+                                Sell even more with personalization, optimization tools, and enhanced automations.
+                            </p>
                             <p class="prices__plan-text">Starts at</p>
-                            <p class="prices__plan-price">$350</p>
-                            <p class="prices__plan-text">/month based on 10,000 contacts*</p>
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__plan-price">$20</p>
+                            <p class="prices__plan-text">/month based on 500 contacts*</p>
+                            <p class="prices__row-title">24/7 Email & Chat Support</p>
                         </div>
                         <div class="prices__plan-row">
                             <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">A/B Testing</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Enhanced Automated Customer Journeys</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Predictive Segmentation</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Dedicated Onboarding Specialist</p>
                         </div>
                     </div>
                     <div class="prices__plan-column">
                         <div class="prices__plan-row">
                             <h3 class="prices__plan-title">Essentials</h3>
-                            <p class="prices__plan-text">Our most advanced tools, unlimited contacts, and priority support; built for teams.</p>
+                            <p class="prices__plan-text prices__plan-describe">
+                                Send the right content at the right time with testing and scheduling features.
+                            </p>
                             <p class="prices__plan-text">Starts at</p>
-                            <p class="prices__plan-price">$350</p>
-                            <p class="prices__plan-text">/month based on 10,000 contacts*</p>
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__plan-price">$13</p>
+                            <p class="prices__plan-text">/month based on 500 contacts*</p>
+                            <p class="prices__row-title">24/7 Email & Chat Support</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Pre-built Email Templates</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">A/B Testing</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Basic Automated Customer Journeys</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Predictive Segmentation</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Dedicated Onboarding Specialist</p>
                         </div>
                     </div>
                     <div class="prices__plan-column">
                         <div class="prices__plan-row">
                             <h3 class="prices__plan-title">Free</h3>
-                            <p class="prices__plan-text">Our most advanced tools, unlimited contacts, and priority support; built for teams.</p>
+                            <p class="prices__plan-text prices__plan-describe">
+                                Easily create email campaigns and learn more about your customers.
+                            </p>
                             <p class="prices__plan-text">Starts at</p>
-                            <p class="prices__plan-price">$350</p>
-                            <p class="prices__plan-text">/month based on 10,000 contacts*</p>
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__plan-price">$0</p>
+                            <p class="prices__plan-text">/month based on 500 contacts*</p>
+                            <p class="prices__row-title">Email support for first 30 days</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Pre-built Email Templates</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">A/B Testing</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Basic Automated Customer Journeys</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Predictive Segmentation</p>
                         </div>
                         <div class="prices__plan-row">
-                            <p class="prices__row-title">Custom-Coded and Pre-built Email Templates</p>
+                            <p class="prices__row-title">Dedicated Onboarding Specialist</p>
                         </div>
                     </div>
                 </div>
+                <p class="prices__service-plan-warning">
+                    * <span>Overages</span> apply if contact or email send limit is exceeded. 
+                    Free plan sending will be paused if contact or email send limit is exceeded.
+                    <span>Learn more</span>
+                </p>
+            </div>
+            <div class="prices__button-container">
+                <button class="prices__see-all-plan-button button">See all plan details</button>
             </div>
         </div>
    </section>
