--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#" class="link header__link">Inspiration</a>
                 <a href="#" class="link header__link">Pricing</a>
             </nav>
-            <img src="assets/logo.svg" alt="header logo" class="img header__logo">
+            <img src="assets/header/logo.svg" alt="header logo" class="img header__logo">
             <div class="header__controls">
                 <div class="header__contacts">
                     <p>Sales:</p>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="header__sign-in-sign-up-bar">
                     <button class="language-switcher button button-transperent">
-                        <img src="assets/language.svg" alt="language-switcher" class="language-switcher__icon">
+                        <img src="assets/header/language.svg" alt="language-switcher" class="language-switcher__icon">
                     </button>
                     <button class="search-controls button button-transperent">Search</button>
                     <button class="user-access-buttons button button-transperent">Log In</button>
@@ -219,6 +219,125 @@
             </div>
             <div class="prices__button-container">
                 <button class="prices__see-all-plan-button button">See all plan details</button>
+            </div>
+        </div>
+   </section>
+   <!--ABOUT US-->
+   <section class="about-us">
+        <div class="about-us__container container">
+            <div class="about-us__title-container">
+                <h2 class="about-us__title">
+                    Generate up to 4x more orders* 
+                    with Customer Journey Builder automations
+                </h2>
+            </div>
+            <div class="about-us__description-row row-column-2">
+                <div class="about-us__description-column">
+                    <div class="about-us__schema">
+                        <div class="about-us__schema-description row-column-2">
+                            <p class="about-us__schema-description-title">
+                                Feedback request
+                            </p>
+                            <p class="about-us__schema-description-title">
+                                Email tagged contact
+                            </p>
+                        </div>
+                        <div class="about-us__schema-diagram row-column-3">
+                            <div class="about-us__schema-column"></div>
+                            <div class="about-us__schema-column">
+                                <div class="about-us__schema-step about-us__schema-step-container">
+                                    <img src="assets/about-us/play.svg" alt="icon" class="about-us__schema-icon">
+                                    <p class="about-us__schema-text">Customer purchase</p>
+                                </div>
+                                <div class="about-us__schema-step">
+                                    <img src="assets/about-us/arrow-down.svg" alt="icon" class="about-us__schema-icon">
+                                </div>
+                                <div class="about-us__schema-step about-us__schema-step-container">
+                                    <img src="assets/about-us/clock.svg" alt="icon" class="about-us__schema-icon">
+                                    <p class="about-us__schema-text">Wait 1 week</p>
+                                </div>
+                                <div class="about-us__schema-step">
+                                    <img src="assets/about-us/arrow-down.svg" alt="icon" class="about-us__schema-icon">
+                                </div>
+                                <div class="about-us__schema-step about-us__schema-step-container">
+                                    <img src="assets/about-us/letter.svg" alt="icon" class="about-us__schema-icon">
+                                    <p class="about-us__schema-text">Send Feedback Request</p>
+                                </div>
+                            </div>
+                            <div class="about-us__schema-column">
+                                <img src="assets/about-us/pointer.svg" alt="icon" class="about-us__schema-icon">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-us__description-column">
+                    <p class="about-us__description-title about-us__first-row-title">Convert more customers at scale</p>
+                    <p class="about-us__description-text">
+                        Drive more traffic and sales by setting up 
+                        automations that trigger emails based on 
+                        customer behavior with our Customer Journey
+                        Builder.
+                    </p>
+                    <a href="#" class="about-us__description-link link">Learn more</a>
+                </div>
+            </div>
+            <div class="about-us__description-row row-column-2">
+                <div class="about-us__description-column">
+                    <div class="about-us__schema">
+                        <div class="about-us__schema-description row-column-2">
+                            <p class="about-us__schema-description-title">
+                                Feedback request
+                            </p>
+                            <p class="about-us__schema-description-title">
+                                Email tagged contact
+                            </p>
+                        </div>
+                        <div class="about-us__schema-diagram row-column-3">
+                            <div class="about-us__schema-column"></div>
+                            <div class="about-us__schema-column">
+                                <div class="about-us__schema-step about-us__schema-step-container">
+                                    <img src="assets/about-us/play.svg" alt="icon" class="about-us__schema-icon">
+                                    <p class="about-us__schema-text">Customer purchase</p>
+                                </div>
+                                <div class="about-us__schema-step">
+                                    <img src="assets/about-us/arrow-down.svg" alt="icon" class="about-us__schema-icon">
+                                </div>
+                                <div class="about-us__schema-step about-us__schema-step-container">
+                                    <img src="assets/about-us/clock.svg" alt="icon" class="about-us__schema-icon">
+                                    <p class="about-us__schema-text">Wait 1 week</p>
+                                </div>
+                                <div class="about-us__schema-step">
+                                    <img src="assets/about-us/arrow-down.svg" alt="icon" class="about-us__schema-icon">
+                                </div>
+                                <div class="about-us__schema-step about-us__schema-step-container">
+                                    <img src="assets/about-us/letter.svg" alt="icon" class="about-us__schema-icon">
+                                    <p class="about-us__schema-text">Send Feedback Request</p>
+                                </div>
+                            </div>
+                            <div class="about-us__schema-column">
+                                <img src="assets/about-us/pointer.svg" alt="icon" class="about-us__schema-icon">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-us__description-column">
+                    <p class="about-us__description-title">Discover new ways to automate</p>
+                    <p class="about-us__description-text">
+                        Get a head start with pre-built journeys 
+                        that help you cross-sell your products, 
+                        recover abandoned carts, re-engage existing 
+                        customers, and win new ones.
+                    </p>
+                    <a href="#" class="about-us__description-link link">Learn more</a>
+
+                    <p class="about-us__description-title about-us__last-description-title">Keep your emails relevant and your brand growing</p>
+                    <p class="about-us__description-text">
+                        Deliver personalized emails based on 
+                        their buying behavior,survey responses, 
+                        chat interactions, and support tickets 
+                        to promote loyalty and growth.
+                    </p>
+                </div>
             </div>
         </div>
    </section>
