--- a/index.html
+++ b/index.html
@@ -286,36 +286,35 @@
                     <div class="about-us__schema">
                         <div class="about-us__schema-description row-column-2">
                             <p class="about-us__schema-description-title">
-                                Feedback request
-                            </p>
-                            <p class="about-us__schema-description-title">
-                                Email tagged contact
+                                Custom Journey
                             </p>
                         </div>
-                        <div class="about-us__schema-diagram row-column-3">
-                            <div class="about-us__schema-column"></div>
+                        <div class="row-column-3 about-us__schema-diagram">
                             <div class="about-us__schema-column">
                                 <div class="about-us__schema-step about-us__schema-step-container">
                                     <img src="assets/about-us/play.svg" alt="icon" class="about-us__schema-icon">
-                                    <p class="about-us__schema-text">Customer purchase</p>
+                                    <p class="about-us__schema-text">Customer abandons cart</p>
                                 </div>
                                 <div class="about-us__schema-step">
                                     <img src="assets/about-us/arrow-down.svg" alt="icon" class="about-us__schema-icon">
-                                </div>
-                                <div class="about-us__schema-step about-us__schema-step-container">
-                                    <img src="assets/about-us/clock.svg" alt="icon" class="about-us__schema-icon">
-                                    <p class="about-us__schema-text">Wait 1 week</p>
-                                </div>
-                                <div class="about-us__schema-step">
-                                    <img src="assets/about-us/arrow-down.svg" alt="icon" class="about-us__schema-icon">
-                                </div>
-                                <div class="about-us__schema-step about-us__schema-step-container">
-                                    <img src="assets/about-us/letter.svg" alt="icon" class="about-us__schema-icon">
-                                    <p class="about-us__schema-text">Send Feedback Request</p>
                                 </div>
                             </div>
                             <div class="about-us__schema-column">
                                 <img src="assets/about-us/pointer.svg" alt="icon" class="about-us__schema-icon">
+                            </div>
+                            <div class="about-us__schema-column">
+                               <div class="about-us__schema-action-block">
+                                    <p class="about-us__schema-action-title">Add a Journey Point</p>
+                                    <ul>
+                                        <li>Rules</li>
+                                        <ul>
+                                            <li><img src="assets/about-us/arrow-down.svg" alt="">1</li>
+                                            <li><img src="assets/about-us/arrow-down.svg" alt="">2</li>
+                                            <li><img src="assets/about-us/arrow-down.svg" alt="">3</li>
+                                        </ul>
+                                        <ul></ul>
+                                    </ul>
+                               </div>
                             </div>
                         </div>
                     </div>
