--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <!--BANNER BENEFITS-->
             <section class="banner-benefits">
-                <div class="banner-benefits__row row-column-4">
+                <div class="banner-benefits__row-1 row-column-4">
                     <div class="banner-benefits__column" id="banner-benefits-1">
                         <img src="assets/banner/benefit-1.svg" alt="benefit img" class="banner-benefits__img img">
                         <div class="banner-benefits__content">
@@ -92,9 +92,7 @@
    <!--PRICES-->
    <section class="prices">
         <div class="prices__container container">
-            <div class="prices__title-container">
-                <h2 class="prices__title">Find the right plan</h2>
-            </div>
+            <h2 class="prices__title">Find the right plan</h2>
             <div class="prices__table">
                 <div class="prices__recommended-plan">
                     <div class="prices__recommended-plan-container">
@@ -105,7 +103,7 @@
                     <div class="prices__plan-column">
                         <div class="prices__plan-row">
                             <h3 class="prices__plan-title">Premium</h3>
-                            <p class="prices__plan-text prices__plan-describe">
+                            <p class="prices__plan-text prices__plan-description">
                                 Our most advanced tools, unlimited contacts, and priority support; built for teams.
                             </p>
                             <p class="prices__plan-text">Starts at</p>
@@ -132,7 +130,7 @@
                     <div class="prices__plan-column">
                         <div class="prices__plan-row">
                             <h3 class="prices__plan-title">Standard</h3>
-                            <p class="prices__plan-text prices__plan-describe">
+                            <p class="prices__plan-text prices__plan-description">
                                 Sell even more with personalization, optimization tools, and enhanced automations.
                             </p>
                             <p class="prices__plan-text">Starts at</p>
@@ -159,7 +157,7 @@
                     <div class="prices__plan-column">
                         <div class="prices__plan-row">
                             <h3 class="prices__plan-title">Essentials</h3>
-                            <p class="prices__plan-text prices__plan-describe">
+                            <p class="prices__plan-text prices__plan-description">
                                 Send the right content at the right time with testing and scheduling features.
                             </p>
                             <p class="prices__plan-text">Starts at</p>
@@ -186,7 +184,7 @@
                     <div class="prices__plan-column">
                         <div class="prices__plan-row">
                             <h3 class="prices__plan-title">Free</h3>
-                            <p class="prices__plan-text prices__plan-describe">
+                            <p class="prices__plan-text prices__plan-description">
                                 Easily create email campaigns and learn more about your customers.
                             </p>
                             <p class="prices__plan-text">Starts at</p>
@@ -225,12 +223,10 @@
    <!--ABOUT US-->
    <section class="about-us">
         <div class="about-us__container container">
-            <div class="about-us__title-container">
-                <h2 class="about-us__title">
-                    Generate up to 4x more orders* 
-                    with Customer Journey Builder automations
-                </h2>
-            </div>
+            <h2 class="about-us__title">
+                Generate up to 4x more orders* 
+                with Customer Journey Builder automations
+            </h2>
             <div class="about-us__description-row row-column-2">
                 <div class="about-us__description-column">
                     <div class="about-us__schema">
